# ground_removal

./: .grt.cpp.swp  .grt_1.cpp.swp  .visualize.cpp.swp  CMakeLists.txt  README.md  ground_removal.h  grt.cpp  grt_1.cpp  run.bash  unit_tests.cpp  visualize.cpp
ground_removal/include/: ground_removal.hpp  ground_removal.tpp
ground_removal/src/: ground_removal.cpp
sample_data/: 1529951213.014286000.pcd  1529951213.115270000.pcd  1529951213.215976000.pcd  1529951213.518652000.pcd  1529951213.619473000.pcd  cloud1.pcd  cloud2.pcd  cloud3.pcd  cloud7.pcd  cloud8.pcd
visualize/: CMakeLists.txt  ground_removal
visualize/src/: visualize.cpp
